--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.mobiledevpro.apptemplate">
+          package="com.mobiledevpro.camera">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="com.mobiledevpro.apptemplate.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:name="com.mobiledevpro.apptemplate.ui.mainscreen.view.MainActivity"
+            android:name=".ui.mainscreen.view.MainActivity"
             android:configChanges="keyboard|orientation|screenSize|screenLayout|keyboardHidden"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize">
