--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,7 @@ dependencies {
     implementation "com.android.support:design:$rootProject.supportLibraryVersion"
 
     implementation("com.crashlytics.sdk.android:crashlytics:$rootProject.crashlyticsVersion@aar") {
-        transitive = true;
+        transitive = true
     }
 
     implementation "com.jakewharton:butterknife:$butterKnifeVersion"
@@ -104,4 +104,6 @@ dependencies {
 
     //commons-ui
     implementation 'com.github.mobile-dev-pro:commons-ui:1.0.5'
+
+    implementation project(":smcamera")
 }
