--- a/smcamera/build.gradle
+++ b/smcamera/build.gradle
@@ -16,6 +16,7 @@ android {
         }
     }
 
+    sourceSets { main { jni.srcDirs = ['src/main/jni', 'src/main/jniLibs/'] } }
 }
 
 dependencies {
