Init camera and check if it's a samsung

--- a/smcamera/build.gradle
+++ b/smcamera/build.gradle
@@ -16,7 +16,13 @@ android {
         }
     }
 
-    sourceSets { main { jni.srcDirs = ['src/main/jni', 'src/main/jniLibs/'] } }
+    sourceSets {
+        main {
+                jniLibs.srcDirs 'src/main/jniLibs/'
+        }
+    }
+
+
 }
 
 dependencies {
