--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,15 @@ android {
         }
     }
 
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            universalApk true
+        }
+    }
+
     //generate apk with custom name
     android.applicationVariants.all { variant ->
         variant.outputs.all { output ->
