--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,11 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+
     buildTypes {
         debug {
             debuggable true
