--- a/smcamera/build.gradle
+++ b/smcamera/build.gradle
@@ -34,5 +34,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //commons-ui
-    implementation 'com.github.mobile-dev-pro:commons-ui:1.0.6'
+    implementation "com.github.mobile-dev-pro:commons-ui:$rootProject.commonsUiVersion"
+
+    //Rx
+    implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxJavaVesrion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroidVersion"
 }
